Fixing z-index of Scrollbar and Modal windows

--- a/app/core/renderer/app.global.scss
+++ b/app/core/renderer/app.global.scss
@@ -90,6 +90,8 @@ div[contenteditable] {
   padding-right: 15px;
 
   .scrollbar-container {
+	z-index: 999;
+
 	&:hover {
 	  background: $scrollbar-background !important;
 	}
